<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="24dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="@id/cardViewBottom"
        app:layout_constraintEnd_toEndOf="@id/cardViewEnd"
        app:layout_constraintStart_toStartOf="@id/cardViewStart"
        app:layout_constraintTop_toTopOf="@id/cardViewTop">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/smiley"
            android:visibility="visible"
            app:srcCompat="@mipmap/smiley" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/anmeldung_mit_sicherheitspin"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circleBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline">

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/circle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle_active_big" />

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:layout_constraintStart_toEndOf="@id/circle1"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive_big" />

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:layout_constraintStart_toEndOf="@id/circle2"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive_big" />

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:layout_constraintStart_toEndOf="@id/circle3"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive_big" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/numBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/numBottom"
        app:layout_constraintEnd_toEndOf="@id/numEnd"
        app:layout_constraintStart_toStartOf="@id/numStart"
        app:layout_constraintTop_toBottomOf="@id/numTop"
        android:columnCount="3"
        android:rowCount="4">

        <TextView
            android:id="@+id/_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="start|top"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/_1"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/_4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_6"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/_7"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_8"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/_9"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/_0"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/_del"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/del"
            android:textStyle="bold" />


    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/numTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/numStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/numEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/numBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cardViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cardViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cardViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cardViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>