<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundpurple"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mytravelinfo"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="201dp"
            android:layout_height="202dp"
            android:layout_gravity="center"
            android:contentDescription="@string/smiley"
            app:srcCompat="@mipmap/smiley" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hier_sehen_sie_hinweise_zu_dieser_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:padding="8dp"
        android:layout_marginVertical="16dp">

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/circle2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/circle_active"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/circle1"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/circle2"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/circle3"
            app:layout_constraintTop_toTopOf="@id/circle1"
            app:layout_constraintBottom_toBottomOf="@id/circle1"
            app:srcCompat="@drawable/circle_inactive"
            android:layout_marginStart="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttoncolor"
        android:paddingVertical="16dp"
        android:text="@string/account_anlegen"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hier_gehts_weiter_zur_anmeldung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginTop="52dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>